[package]
name = "rscni"
version = "0.0.2"
edition = "2021"
authors = ["terassyi <iscale821@gmail.com>"]
repository = "https://github.com/terassyi/rscni"
license-file = "LICENSE"
readme = "README.md"
description = "CNI plugin library for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"

[dev-dependencies]
assert-json-diff = "2.0.2"
rstest = "0.18.2"
