workspace = { members = ["examples/async-rscni-debug", "examples/rscni-debug"] }
[package]
name = "rscni"
version = "0.2.1"
edition = "2024"
authors = ["terassyi <iscale821@gmail.com>"]
repository = "https://github.com/terassyi/rscni"
license-file = "LICENSE"
readme = "README.md"
description = "CNI plugin library for Rust"
keywords = ["cni", "container", "networking", "kubernetes"]
categories = ["network-programming", "api-bindings"]
homepage = "https://github.com/terassyi/rscni"
documentation = "https://docs.rs/rscni"
exclude = [
  ".github/",
  "examples/",
]

[features]
default = ["std"]
std = []
async = ["async-trait"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.89", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
assert-json-diff = "2.0.2"
rstest = "0.26.1"
tempfile = "3.14.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
