[package]
name = "async-rscni-debug"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = [
	"io-util",
	"fs",
	"macros",
	"rt-multi-thread",
] }
rscni = { path = "../../", features = ["async"] }
